--- a/src/Makefile
+++ b/src/Makefile
@@ -1,22 +1,71 @@
-CC=g++
-CFLAGS=-Wall -Wextra -Wno-unused-parameter -I.
-LDFLAGS=
+#
+# 'make depend' uses makedepend to automatically generate dependencies 
+#	       (dependencies are added to end of Makefile)
+# 'make'	build executable file 'mgsp'
+# 'make clean'  removes all .o and executable files
+#
 
-TARGETS=tests
-SOURCES=$(shell echo *.cpp)	
-COMMON_OBJECTS=$(SOURCES:.cpp=.o)
+# define the C compiler to use
+CC = g++
 
-all: $(TARGETS)
+# define any compile-time flags
+CFLAGS = -Wall -g -std=c++11 -ftree-vectorize -O3 -ffast-math
 
-tests: $(COMMON_OBJECTS)
-	$(CC) $(CFLAGS) $^ -o $@ -I. $(LDFLAGS)
+# define any directories containing header files other than /usr/include
+#
+INCLUDES = -I.
+
+# define library paths in addition to /usr/lib
+#   if I wanted to include libraries not in /usr/lib I'd specify
+#   their path using -Lpath, something like:
+LFLAGS =
+
+# define any libraries to link into executable:
+#   if I want to link in libraries (libx.so or libx.a) I use the -llibname 
+#   option, something like (this will link in libmylib.so and libm.so:
+LIBS =
+
+# define the C source files
+SRCS = MultiGridSpacePartition.cpp
+
+# define the C object files 
+#
+# This uses Suffix Replacement within a macro:
+#   $(name:string1=string2)
+#	 For each word in 'name' replace 'string1' with 'string2'
+# Below we are replacing the suffix .c of all words in the macro SRCS
+# with the .o suffix
+#
+OBJS = $(SRCS:.cpp=.o)
+
+# define the executable file 
+MAIN = mgsp
+
+#
+# The following part of the makefile is generic; it can be used to 
+# build any executable just by changing the definitions above and by
+# deleting dependencies appended to the file from 'make depend'
+#
+
+.PHONY: depend clean
+
+all:    $(MAIN)
+	@echo  Simple compiler named mgsp has been compiled
+
+$(MAIN): $(OBJS) 
+	$(CC) $(CFLAGS) $(INCLUDES) -o $(MAIN) $(OBJS) $(LFLAGS) $(LIBS)
+
+# this is a suffix replacement rule for building .o's from .c's
+# it uses automatic variables $<: the name of the prerequisite of
+# the rule(a .c file) and $@: the name of the target of the rule (a .o file) 
+# (see the gnu make manual section about automatic variables)
+.cpp.o:
+	$(CC) $(CFLAGS) $(INCLUDES) -c $<  -o $@
 
 clean:
-	rm -f $(TARGETS) *.o .depend *~
+	$(RM) *.o *~ $(MAIN)
 
-.depend: *.[ch]
-	$(CC) -MM $(SOURCES) >.depend
+depend: $(SRCS)
+	makedepend $(INCLUDES) $^
 
--include .depend
-
-.PHONY: clean all
+# DO NOT DELETE THIS LINE -- make depend needs it
